{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "f87e12f4-66cb-4139-8c60-712234285e6a",
            "actions": [
                {
                    "name": "FlickPress",
                    "type": "Button",
                    "id": "a52bdecd-9524-4415-ba35-3da10a45237f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "d1cd4133-86c3-4845-9530-fe660480d5ac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0a873532-2c63-4bea-a068-febd13596f52",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e59d715-c4e5-44cd-9082-78d0f1ee4467",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}